# verinaut

./: .cursorignore  .env.example  .gitignore  .pylintrc  LICENSE  Makefile  README.md  main.py  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a8fb6d0ffed7_initial_prediction_model.py  b4633a698241_create_prediction_update_table.py  e8e1013a9f00_create_source_table.py  v001_initial_prediction_model.py  v002_create_prediction_update_table.py  v003_create_source_table.py  v004_refactor_prediction_models.py  v005_refactor_fields_optionality.py  v006_create_humanreview_table.py  v007_change_prediction_status_approved_.py
apps/api/src/: config.py  logging_config.py  main.py  sqldb.py
apps/api/src/models/: __init__.py  prediction.py
apps/api/src/routers/: predictions.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: HumanReview.json  Prediction.json  PredictionUpdate.json  Source.json
apps/api/tests/integration/: test_predictions.py
apps/web/: .eslintcache  .npmrc  eslint.config.mjs  index.tsx  package.json  prettier.config.mjs  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: Navbar.tsx
