[project]
name = "varinaut-api"
version = "0.1.0"
description = "FastAPI backend for Varinaut"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0, <0.125.0",
    "uvicorn[standard]>=0.38.0",
    "sqlmodel>=0.0.27",
    "alembic>=1.17.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short"
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
